--- a/.overcommit.yml
+++ b/.overcommit.yml
@@ -24,10 +24,13 @@ PreCommit:
       - '**/config/**'
       - '**/spec/**'
       - '**/*_spec.rb'
+      - '**/db/**'
+      - '**/log/*.*'
 
   TrailingWhitespace:
     enabled: true
     exclude:
+      - '**/log/*.*'
       - '**/db/structure.sql' # Ignore trailing whitespace in generated files
 #
 #PostCheckout:
